# AprendizajeNoSupervisado

./: pyproject.toml
notebooks/: consignas.ipynb  data_no_supervisado.parquet  data_no_supervisado_final.parquet  data_no_supervisado_no_balanceado.parquet
notebooks/grupo2/: Preprocesamiento.ipynb  cupones_no_supervisado.parquet  datos_clientes.parquet  preprocesado_no_supervisado_agrupado.parquet
