[tool.poetry]
name = "AprendizajeNoSupervisado"
version = "0.1.0"
description = "Data analytics for Cupones"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
seaborn = "^0.11.2"
scipy = "^1.7.1"
jupyterlab = "^3.1.10"
pyarrow = "^5.0.0"
pgeocode = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
